fix wrong position of the text issue

--- a/css/style.css
+++ b/css/style.css
@@ -1835,7 +1835,8 @@ h6 {
     padding: 0 40px 0 46px;
     border: none;
     border-radius: var(--border-radius);
-    background: transparent; }
+    background: transparent;
+    margin: auto; }
     .exch-search__input::placeholder {
       color: var(--clr-text); }
   .exch-search__hangle {
